--- a/libro/html/incluir/css/estilos-imprimir.css
+++ b/libro/html/incluir/css/estilos-imprimir.css
@@ -1,67 +1,140 @@
+/**
+* Estilos
+* @version 1.0
+*/
+
+
+/* Oculto los elementos externos al libro
+/--------------------------------------------------------- */
 
 body {
-  font-family: Georgia, serif;
+  background: none;
+  font-size: 12px;
+  line-height:1.5;
+  font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;
+  color:#000;
+  font-size:10pt;
 }
 
-#libro {
-  width: 60%;
-  margin: 0 auto;
+#header {
+  display: none;
 }
 
-#libro h2{
-	margin: 60px 0 30px 0;
+#copyright {
+  margin: 0 0 50px 0;
 }
 
-#libro h3{
-	margin: 40px 0 15px 0;
+#copyright p {
+  text-align: center;
+  color: #000;
+  font-size: 11px;
+  padding: 5px 0;
+  margin: 0;
 }
 
-#libro h4{
-	margin: 10px 0 10px 0;
+/* Estilos del libro
+/--------------------------------------------------------- */
+
+.libro{
+	font-size: 1.4em;
 }
 
-#libro h2 a, #libro h3 a, #libro h4 a{
+.libro h1, .libro h2, .libro h3, .libro h4, .libro h5, .libro h6 {
+	font-family:"Helvetica Neue", Arial, "Lucida Grande", sans-serif;
+}
+
+.libro #imprimir {
+  width: 1000px;
+  height: 979px;
+  background: transparent url(../img/biblioteca-tapa.png) no-repeat center center;
+  margin: 100px 0 400px 0;
+}
+
+.libro #indice {
+  margin: 10px 0;
+}
+
+.libro #TOC{
+	margin: 0 0 1200px 0;
+}
+
+.libro #TOC li {
+  margin: 10px 0;
+}
+
+.libro #TOC li a {
+  color: #000;
+  text-decoration: none;
+  cursor: text;
+}
+
+.libro #titulo h1{
+	display: none;
+}
+
+.libro div{
+	margin: 50px 0;
+}
+
+.libro ul{
+	margin: 0 0 25px 40px;
+}
+
+.libro li p{
+	margin: 0;
+}
+
+.libro hr{
+	background:#ccc;
+	color:#ccc;
+	width:100%;
+	height:2px;
+	margin:2em 0;
+	padding:0;
+	border:none;
+}
+
+.libro h2 a, .libro h3 a, .libro h4 a{
   color: #000;
   text-decoration: none;
 }
 
-#libro a code{
+.libro a code{
   font-family: Georgia, serif;
   font-size: 16px;
 }
 
-#libro blockquote {
+.libro blockquote {
   background: #FEEDC4;
   padding: 5px;
 }
 
-#libro img {
+.libro blockquote p{
+	margin: 0;
+}
+
+.libro img {
   max-width: 100%;
   display: block;
   margin: 20px auto;
   border: 1px solid #ccc;
 }
 
-#libro pre.sourceCode, #libro pre.numberLines {
+.libro pre.sourceCode, .libro pre.numberLines {
   background: none repeat scroll 0 0 #F1F1F1;
   border: 1px solid #DDDDDD;
   color: #000000;
-  font-size: 12px;
-  overflow: auto;
-  width: 745px;
-  margin: 0;
+  word-wrap: break-word;
+  width: 100%;
+  margin: 20px 0;
 }
 
-#libro .nums pre {
+.libro .nums pre {
   margin: 0;
   padding: 0 10px 0 0;
 }
 
-#libro pre code, #libro .nums pre {
-  font: 13px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+.libro pre code, .libro .nums pre {
+  font: 12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
 
-
-#TOC li {
-  margin: 10px 0;
-}
