--- a/libro/html/incluir/css/estilos.css
+++ b/libro/html/incluir/css/estilos.css
@@ -196,8 +196,12 @@ body {
 }
 
 .libro #titulo h1{
-	font-size: 2.5em;
-	color: #000;
+	font-size: 2.7em;
+	text-align: center;
+}
+
+.libro #sobre h4 a{
+	text-decoration: underline;
 }
 
 .libro div{
