--- a/libro/html/incluir/css/estilos.css
+++ b/libro/html/incluir/css/estilos.css
@@ -208,6 +208,11 @@ body {
 	margin: 50px 0;
 }
 
+.libro p + p {
+	text-indent: 0;
+	margin: 0 0 1.5em;
+}
+
 .libro ul{
 	margin: 0 0 25px 40px;
 }
